--- a/next/PDP.html
+++ b/next/PDP.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <title>LI|TF AMP Demo</title>
     <link rel="canonical" href="http://www.teleflora.com/gift-giving-ideas/valentines">
+    <link rel="manifest" href="manifest.json">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -17,6 +18,7 @@
     <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
     <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
     <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
+    <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
     <script type="application/ld+json">{
         "@context": "http://schema.org/",
         "@type": "Product",
@@ -169,8 +171,8 @@ amp-selector [option][selected] {
 <body>
     <!-- Google Tag Manager -->
     <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-TP856JH&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
+     <amp-install-serviceworker src="https://teleflorastgblog.site/PDP/service-worker.js" data-iframe-src="https://teleflorastgblog.site/PDP/service-worker.html" layout="nodisplay"></amp-install-serviceworker>
  
-
 <!-- Desktop/mobile Top Promo LightBox. this is activated when the "top-promo-container span" is clicked  ----------------------------------------->
     <amp-lightbox id="my-lightbox" layout="nodisplay">
         <div class="lightbox" on="tap:my-lightbox.close" role="button" tabindex="0">
@@ -836,19 +838,17 @@ amp-selector [option][selected] {
             <div class="product-subbox">
                 <div class="product-gallery">
     <amp-carousel id="green-apple-carousel" width="1024" height="682" layout="responsive" type="slides" [slide]="product.selectedSlideForGreen" on="slideChange: AMP.setState({product: {selectedSlideForGreen: event.index}})" class="show fadeIn" [class]="product.selectedColor == 'green' ? 'show  fadeIn' : 'hide'">
-<!--
-      <amp-img src="/img/green_apple_1_1024x682.jpg" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
-      <amp-img src="/img/green_apple_2_1024x685.jpg" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
--->
+
+      <amp-img src="http://s7d2.scene7.com/is/image/Teleflora/T17V100A?&wid=400&fmt=jpeg&qlt=80,0&op_sharpen=0&resMode=bilin&op_usm=3.0,0.5,1.0,0&iccEmbed=0&layer=1&opac=0&layer=2&opac=55&layer=5&opac=0&layer=3&opac=0" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
+      <amp-img src="http://s7d2.scene7.com/is/image/Teleflora/T17V100A?&wid=400&fmt=jpeg&qlt=80,0&op_sharpen=0&resMode=bilin&op_usm=3.0,0.5,1.0,0&iccEmbed=0&layer=1&opac=0&layer=2&opac=55&layer=5&opac=0&layer=3&opac=0" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
+
     </amp-carousel>
     <amp-carousel id="golden-apple-carousel" width="1024" height="682" layout="responsive" type="slides" [slide]="product.selectedSlideForGolden" on="slideChange: AMP.setState({product: {selectedSlideForGolden: event.index}})" class="hide" [class]="product.selectedColor == 'golden' ? 'show  fadeIn' : 'hide'">
-<!--      <amp-img src="/img/golden_apple1_1024x682.jpg" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>-->
+      <amp-img src="http://s7d2.scene7.com/is/image/Teleflora/T17V100A?&wid=400&fmt=jpeg&qlt=80,0&op_sharpen=0&resMode=bilin&op_usm=3.0,0.5,1.0,0&iccEmbed=0&layer=1&opac=0&layer=2&opac=55&layer=5&opac=0&layer=3&opac=0" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
     </amp-carousel>
     <amp-carousel id="red-apple-carousel" width="1024" height="682" layout="responsive" type="slides" [slide]="product.selectedSlideForRed" on="slideChange: AMP.setState({product: {selectedSlideForRed: event.index}})" class="hide" [class]="product.selectedColor == 'red' ? 'show  fadeIn' : 'hide'">
-<!--
-      <amp-img src="/img/red_apple_1_1024x682.jpg" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
-      <amp-img src="/img/red_apple_2_1024x793.jpg" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
--->
+      <amp-img src="http://s7d2.scene7.com/is/image/Teleflora/T17V100A?&wid=400&fmt=jpeg&qlt=80,0&op_sharpen=0&resMode=bilin&op_usm=3.0,0.5,1.0,0&iccEmbed=0&layer=1&opac=0&layer=2&opac=55&layer=5&opac=0&layer=3&opac=0" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
+      <amp-img src="http://s7d2.scene7.com/is/image/Teleflora/T17V100A?&wid=400&fmt=jpeg&qlt=80,0&op_sharpen=0&resMode=bilin&op_usm=3.0,0.5,1.0,0&iccEmbed=0&layer=1&opac=0&layer=2&opac=55&layer=5&opac=0&layer=3&opac=0" width="1024" height="682" layout="responsive" on="tap:gallery-lightbox" role="button" tabindex="0"></amp-img>
     </amp-carousel>
 
   </div>
